# se-challenge-expenses

./: .babelrc  .classpath  .dockerignore  .editorconfig  .eslintrc  .getignore  .gitIgnore  .gitignore  .overcommit.yml  .project  .rubocop.yml  .ruby-gemset  .sequelizerc  .~lock.data_example.csv#  Cargo.toml  Dockerfile  Gemfile  Gruntfile.js  Guardfile  INSTALL  INSTRUCTIONS.md  Installation.md  Instructions  MANIFEST.in  MainApp.cs  Makefile  Notes.docx  Procfile  README  README.markdown  README.markdown.original  README.md  README.rdoc  README.txt  Rakefile  Readme.md  SE_CHALLENGE_EXPENSE_README.md  SOLUTION.markdown  Startup.cs  Vagrantfile  (+106 more)
.NET/: .gitignore  Wave.sln
Client/: deploy.bat  error.html  example55.html  example61.html  example62.html  index.html  privacyPolicy.html
Controllers/: HomeController.cs
Documentation/: Architecture.txt  Functionality.txt  Planing.txt
Models/: Expense.cs  ExpenseDataFactory.cs
Node/: gruntfile.js  package.json  server.js
Properties/: launchSettings.json
Public/: bundle.js  index.html  index.js  util_client.js
Server/: .gitignore  db_config.js  server.js  util_server.js
TagHelpers/: MenuLinkTagHelper.cs
Views/: _ViewImports.cshtml
Wave/: Database Script.sql  README.txt  Wave.sln  employeeExpense.csv
Wave Challenge/: Wave Challenge.sln
WaveChallenge/: manage.py
WaveChallengeJava/: .classpath  .project
WaveChallengeResources/: .project  WaveDB.sql  data_example2.csv
WaveHomework/: WaveHomework.sln
WaveProject/: .project  .pydevproject  .swp  README.txt  manage.py
WaveUp/: settings.py  urls.py  (+1 more)
(+2998 files in other folders)
